RESOLVED FIXED251597
REGRESSION (256782@main): Animating visibility with a display:contents child causes an element to disappear
https://bugs.webkit.org/show_bug.cgi?id=251597
Summary REGRESSION (256782@main): Animating visibility with a display:contents child ...
Rado
Reported 2023-02-02 08:59:16 PST
Created attachment 464815 [details] Test page An element with transitioned color on hover, inside a display: contents parent, which is displayed by animated visibility: visible. Hover it to hide it only in Safari 16.3. Normal transition observed in older Safari and Chrome. <style> @keyframes menu-opening { 100% { visibility: visible; } } ul { animation: menu-opening .3s 1 forwards; visibility: hidden; } li { display: contents; } a { transition: color .2s ease-in-out; } a:hover { color: red; } </style> <ul> <li> <a href="/">Hover me on Safari 16.3 and I disappear</a> </li> </ul> https://rado.bg/safari-16.3.html
Attachments
Test page (612 bytes, text/html)
2023-02-02 08:59 PST, Rado
no flags
Radar WebKit Bug Importer
Comment 1 2023-02-06 15:50:03 PST
alan
Comment 2 2023-02-06 16:13:06 PST
alan
Comment 3 2023-02-06 16:15:26 PST
(In reply to zalan from comment #2) > regression range: > https://commits.webkit.org/compare/256789@main...256757@main there's a few strong candidates in that range, I'd start with [web-animation].
Antoine Quint
Comment 4 2023-02-07 01:06:18 PST
This regressed with 256782@main, the fix for bug 247803.
Antti Koivisto
Comment 5 2023-02-09 01:07:19 PST
Antti Koivisto
Comment 6 2023-02-14 09:31:07 PST Comment hidden (obsolete)
EWS
Comment 7 2023-02-14 12:41:42 PST
Committed 260270@main (53814777b5f2): <https://commits.webkit.org/260270@main> Reviewed commits have been landed. Closing PR #9853 and removing active labels.
EWS
Comment 8 2023-02-23 14:53:27 PST
Committed 259548.276@safari-7615-branch (403ebdb08ec1): <https://commits.webkit.org/259548.276@safari-7615-branch> Reviewed commits have been landed. Closing PR #414 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.